--- a/src/styles.scss
+++ b/src/styles.scss
@@ -85,3 +85,35 @@ app-sidebar {
   flex: 1;
   padding: 2rem;
 }
+
+
+input[type="text"],
+input[type="email"],
+input[type="password"] {
+  border:1px solid #ccc;
+  border-radius: 0.5rem;
+  padding: 0.75rem 1rem;
+}
+
+
+input:hover {
+  border-color: #007bff;
+}
+
+input:focus {
+  border-color: #007bff;
+}
+
+button,
+.btn {
+  padding: 0.75rem 1.5rem;
+  font-size: 1rem;
+  font-weight: bold;
+  color: #fff;
+  background-color: #007bff;
+  border: none;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+}
