--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -28,5 +28,7 @@
     </div>
 
     <button class="btn__login" type="submit">Login</button>
+
+    <a class="register" routerLink="/register">Register</a>
   </form>
 </div>
