--- a/src/styles.scss
+++ b/src/styles.scss
@@ -89,7 +89,8 @@ app-sidebar {
 
 input[type="text"],
 input[type="email"],
-input[type="password"] {
+input[type="password"],
+select {
   border:1px solid #ccc;
   border-radius: 0.5rem;
   padding: 0.75rem 1rem;
@@ -116,4 +117,11 @@ button,
   cursor: pointer;
   text-align: center;
   text-decoration: none;
+}
+
+
+button:disabled {
+  background-color: #ccc;
+  cursor: not-allowed;
+  opacity: 0.6;
 }
