--- a/src/app/components/game-card/game-card.component.scss
+++ b/src/app/components/game-card/game-card.component.scss
@@ -8,14 +8,16 @@
   box-sizing: border-box;
   height: 500px;
   width:350px;
-  display: block;
-  overflow: hidden;
+
+  flex-shrink: 1;
 }
+
 .game-card h3 {
   margin: 0.5rem 0;
   font-size: 1.2rem;
   font-weight: bold;
 }
+
 .game-card img {
   width: 100%;
   height: 200px;
