--- a/src/styles.scss
+++ b/src/styles.scss
@@ -52,7 +52,7 @@ a:visited {
   flex-direction: column;
   gap: 2rem;
   padding: 2rem;
-  max-width: 90%;
+  max-width: 100vw;
   margin: 0 auto;
 }
 
@@ -83,7 +83,7 @@ app-sidebar {
 
 .main-content {
   flex: 1;
-  padding: 2rem;
+  padding: 1rem;
 }
 
 
