- create ngRX for user current status and user data. - subscription from Auth.onAuthStateChanged check if user  @angular/fire/auth to check user status - Adapt Header Component - show user name if user logged in - implement Logout function. -Register Form should be only visible if user is logged out (TODO - will do another way)

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -10,7 +10,17 @@
     </div>
     <nav class="header-nav-container">
       <a class="header-nav-link" routerLink="/games">Games</a>
-      <a class="header-nav-link" routerLink="/login">Login</a>
+      <div class="userMenu">
+        <!--TODO : Create menu come with click - profile / logout etc -->
+        @if(isAuthenticated$ | async; as isAuth ) {
+        <span class="header-nva-user">
+          {{ (user$ | async)?.displayName || (user$ | async)?.email }}
+        </span>
+        <a class="header-nav-link" (click)="logout()">todo-logout</a>
+        }@else {
+        <a class="header-nav-link" routerLink="/login">Login</a>
+        }
+      </div>
     </nav>
   </div>
 </div>
