--- a/src/app/components/game-card/game-card.component.html
+++ b/src/app/components/game-card/game-card.component.html
@@ -1,5 +1,7 @@
 <div class="game-card">
-  <img [src]="game().background_image" alt="{{ game().name }}" />
+  <a [routerLink]="['/games', game().id]">
+    <img [src]="game().background_image" alt="{{ game().name }}" />
+  </a>
   <h3>{{ game().name }}</h3>
   <p>Rating: {{ game().rating }}</p>
   <p>Released : {{ game().released }}</p>
