--- a/src/app/pages/games/game-detail/game-detail.component.scss
+++ b/src/app/pages/games/game-detail/game-detail.component.scss
@@ -1,5 +1,5 @@
 .game-banner {
-  min-height: 300px;
+  min-height: 500px;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -15,4 +15,33 @@
   }
 }
 
+.main-detail-section {
+  display: grid;
+  grid-template-columns:3fr 1fr;
+  gap: 2rem;
+  .game-description {
+    padding: 1rem;
+  }
 
+  .game-metadata {
+    display: flex;
+    flex-direction: column;
+    gap:1rem;
+    .game-metadata__row {
+      display: block;
+      align-items: center;
+      .metatitle {
+        grid-column: 1;
+        font-style: italic;
+        font-size: 0.8rem;
+      }
+    }
+  }
+}
+
+
+
+
+.section {
+  margin-bottom: 5rem;
+}
