--- a/src/app/pages/games/games.component.scss
+++ b/src/app/pages/games/games.component.scss
@@ -6,5 +6,34 @@
   padding: 1rem;
 
 }
+.loader-wrapper {
+  position: relative;
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  .loader {
+      width: 48px;
+      height: 48px;
+      border: 5px solid #FFF;
+      border-bottom-color: transparent;
+      border-radius: 50%;
+      animation: rotation 1s linear infinite;
+    }
 
+    @keyframes rotation {
+      0% {
+          transform: rotate(0deg);
+      }
+      100% {
+          transform: rotate(360deg);
+      }
+    }
+}
 
+.error-message {
+  color: rgb(185, 71, 71);
+  font-weight: bold;
+  text-align: center;
+  margin-top: 2rem;
+}
