Games Lists page extended with tag viewer plus test extended

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,1 +1,28 @@
-<p>sidebar works!</p>
+<div>
+  select list cards in side bar should be re-usable component. getting modified input to navigate
+  right urls - redirectTo. queryStringParamTitle, MultiSelect? - single select?, Title, Theme etc
+</div>
+<br />
+<div>
+  Genes - List as select? - by select
+  <ul>
+    - nagivate to /games?genres=action? - games page need to be
+  </ul>
+  <ul>
+    - extended for getting all params?
+  </ul>
+</div>
+<br />
+<div>
+  Platforms? - List as select? - by select
+  <ul>
+    - nagivate to /games?genres=action? - games page need to be
+  </ul>
+  <ul>
+    - extended for getting all params?
+  </ul>
+</div>
+
+<div id="mySidenav" class="sidenav">
+  <a href="#games"><i class="fa fa-fw fa-home"></i> Home</a>
+</div>
