--- a/src/app/components/game-card/game-card.component.scss
+++ b/src/app/components/game-card/game-card.component.scss
@@ -2,25 +2,51 @@
   background-color: var(--card-bg);
   color: var(--text-color);
   width: 200px;
-  padding: 1rem;
-  border-radius: 8px;
+  padding: 0.7rem;
+  border-radius: 6px;
   text-align: center;
   box-sizing: border-box;
-  height: 350px;
-  width:300px;
+  min-height: 280px;
+  width:260px;
   flex-shrink: 1;
+  overflow: hidden;
+
+  h3 {
+    margin: 0.4rem 0;
+    font-size: 1rem;
+    font-weight: bold;
+    line-height: 1;
+  }
+
+  img {
+    width: 100%;
+    height: 160px;
+    object-fit: cover;
+    border-radius: 5px;
+    margin-bottom: 1rem;
+  }
+
+  &:hover {
+    transform:scale(1.05);
+  }
+
+  &:hover .extra-info {
+    max-height: 200px;
+    overflow: auto;
+    transition: max-height 0.5s ease-in;
+  }
+  .extra-info {
+    max-height: 0;
+    overflow: hidden;
+  }
+
+  button[matButton] {
+    width:100%;
+    background-color: #44474e;
+
+    mat-icon {
+      float: right;
+    }
+  }
 }
 
-.game-card h3 {
-  margin: 0.5rem 0;
-  font-size: 1.2rem;
-  font-weight: bold;
-}
-
-.game-card img {
-  width: 100%;
-  height: 200px;
-  object-fit: cover;
-  border-radius: 5px;
-  margin-bottom: 1rem;
-}
