temp check in - user favorite saving feature for games / gameCard

--- a/src/app/components/game-card/game-card.component.html
+++ b/src/app/components/game-card/game-card.component.html
@@ -2,14 +2,22 @@
   <a [routerLink]="['/games', game().id]">
     <img [src]="game().background_image" alt="{{ game().name }}" />
   </a>
-  <h3>{{ game().name }}</h3>
+  <h3 class="game-title">{{ game().name }}
+    @if(uid()) {
+      <mat-icon class="favorite" (click)="toggleFavorite(game())" [ngClass]="{ active: isInFavorites(game()) }">
+        favorite
+      </mat-icon>
+    }
+
+  </h3>
+
+
   <p>Rating: {{ game().rating }}</p>
   <p>Released : {{ game().released }}</p>
 
 
   <div class="extra-info">
     @if((game().suggestions_count?? 0) > 0){
-
       <button matButton mat-button [routerLink]="['/games' ]"
         [queryParams]="{gameId: game().id, type: 'suggested', title: game().name }">
         Games like this {{game().suggestions_count??0}}
