--- a/src/app/components/game-card/game-card.component.scss
+++ b/src/app/components/game-card/game-card.component.scss
@@ -11,19 +11,32 @@
   flex-shrink: 1;
   overflow: hidden;
 
-  h3 {
-    margin: 0.4rem 0;
-    font-size: 1rem;
-    font-weight: bold;
-    line-height: 1;
+  .game-title{
+    h3 {
+      //margin: 0.4rem 0;
+      font-size: 1rem;
+      font-weight: bold;
+      line-height: 1;
+    }
+     .favorite{
+      color:var(--accent-inactive);
+      &.active{
+        color:var(--accent-active);
+      }
+        &:hover{
+        scale: 1.2;
+        color: var(--accent-hover);
+      }
+    }
   }
+
 
   img {
     width: 100%;
     height: 160px;
     object-fit: cover;
     border-radius: 5px;
-    margin-bottom: 1rem;
+    //margin-bottom: 0.2rem;
   }
 
   &:hover {
