--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,8 +38,9 @@ body {
   --bg-color: #121212;
   --text-color: #f5f5f5;
   --card-bg: #1e1e1e;
-  --accent-color: #bb86fc;
-  --accent-hover: #d0aaff;
+  --accent-inactive: #ddcfee;
+  --accent-color: #8941e2;
+  --accent-hover: #6923be;
   --accent-active: #9c6de0;
 }
 
