--- a/src/app/pages/games/games.component.html
+++ b/src/app/pages/games/games.component.html
@@ -31,7 +31,7 @@
     @else
     {
       @for (game of games(); track $index) {
-        <app-game-card [game]="game" [uid]="currentUid()" />
+        <app-game-card [game]="game" />
       }
     }
 
